Make it easier to load remote content
To get to remote content now requires an extra click, this is actually quite annoying for those of us that have remote content blocked all the time. Please add an option to display the old "Remote Content" button right in the email message header instead of the light bulb.
Edited by Milan Crha