I#847 - Make it easier to load remote content

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/847